# Pluralsight-CPP-Path

./: -I  .gitignore  README.md
.metadata/: version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
.metadata/.plugins/com.genuitec.eclipse.devstyle/: recent.json
.metadata/.plugins/com.genuitec.eclipse.monitor/: myeclipse-usage.properties
.metadata/.plugins/com.genuitec.eclipse.ui.common.platform/: color-definitions-fix.css
.metadata/.plugins/org.eclipse.cdt.core/: GettingStarted.1594562467370.pdom  StringCollection.1594634931011.pdom  VectorContainer.1594636861775.pdom
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 6.snap  7.snap
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
Beginner/CPP_Fundamentals_Including_CPP17/modern_memory_store/: CMakeLists.txt
Beginner/CPP_Fundamentals_Including_CPP17/modern_memory_store/include/: modern_location.hpp
Beginner/CPP_Fundamentals_Including_CPP17/modern_memory_store/lib/include/: Location.hpp
Beginner/CPP_Fundamentals_Including_CPP17/modern_memory_store/splike/lib_location/: Location.cpp
Beginner/CPP_Fundamentals_Including_CPP17/modern_memory_store/src/: main.cpp  modern_location.cpp
Beginner/Practical_CPP_14_17_Features/lambda/: run  (+3 more)
GettingStarted/: .cproject  .project
ProTemplate/: .cproject  .project  Circle.cpp  Circle.hpp  Makefile  ProTemplate.cpp  Rectangle.cpp  Rectangle.hpp
StringCollection/: .project
StringCollections/: .cproject
VectorContainer/: .cproject  VectorContainer.cpp
(+73 files in other folders)
